Map corrections, UI corrections, add tests, warnings corrections

--- a/app/src/main/res/layout-w600dp-land/fragment_detail_estate.xml
+++ b/app/src/main/res/layout-w600dp-land/fragment_detail_estate.xml
@@ -96,7 +96,7 @@
                         android:layout_height="24dp"
                         android:layout_marginStart="15dp"
                         android:layout_marginTop="20dp"
-                        android:src="@drawable/ic_surface_black"
+                        android:background="@color/colorPrimary"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -107,7 +107,7 @@
                         android:layout_marginStart="15dp"
                         android:layout_marginTop="-2dp"
                         android:text="@string/surface"
-                        android:textSize="13dp"
+                        android:textSize="13sp"
                         android:textStyle="bold"
                         app:layout_constraintStart_toEndOf="@id/icon_surface"
                         app:layout_constraintTop_toTopOf="@+id/icon_surface" />
@@ -118,7 +118,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
-                        android:textSize="13dp"
+                        android:textSize="13sp"
                         app:layout_constraintStart_toStartOf="@id/tv_surface"
                         app:layout_constraintTop_toBottomOf="@id/tv_surface" />
 
@@ -130,7 +130,7 @@
                         android:layout_height="24dp"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="25dp"
-                        android:src="@drawable/ic_home_black"
+                        android:background="@color/colorPrimary"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/text_surface" />
 
@@ -141,7 +141,7 @@
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="-2dp"
                         android:text="@string/nbr_of_rooms"
-                        android:textSize="13dp"
+                        android:textSize="13sp"
                         android:textStyle="bold"
                         app:layout_constraintStart_toEndOf="@id/icon_nbr_of_rooms"
                         app:layout_constraintTop_toTopOf="@+id/icon_nbr_of_rooms" />
@@ -152,7 +152,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="10dp"
-                        android:textSize="13dp"
+                        android:textSize="13sp"
                         app:layout_constraintStart_toStartOf="@id/tv_surface"
                         app:layout_constraintTop_toBottomOf="@+id/tv_nbr_of_rooms" />
 
@@ -164,7 +164,7 @@
                         android:layout_height="24dp"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="25dp"
-                        android:src="@drawable/ic_bathtub_black"
+                        android:background="@color/colorPrimary"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/text_nbr_of_rooms" />
 
@@ -175,7 +175,7 @@
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="-2dp"
                         android:text="@string/nbr_of_bathrooms"
-                        android:textSize="13dp"
+                        android:textSize="13sp"
                         android:textStyle="bold"
                         app:layout_constraintStart_toEndOf="@id/icon_nbr_bathrooms"
                         app:layout_constraintTop_toTopOf="@+id/icon_nbr_bathrooms" />
@@ -186,7 +186,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="10dp"
-                        android:textSize="13dp"
+                        android:textSize="13sp"
                         app:layout_constraintStart_toStartOf="@id/tv_surface"
                         app:layout_constraintTop_toBottomOf="@+id/tv_nbr_bathrooms" />
 
@@ -199,7 +199,7 @@
                         android:layout_height="24dp"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="25dp"
-                        android:src="@drawable/ic_bed_black"
+                        android:background="@color/colorPrimary"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/text_nbr_bathrooms" />
 
@@ -210,7 +210,7 @@
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="-2dp"
                         android:text="@string/nbr_of_bedrooms"
-                        android:textSize="13dp"
+                        android:textSize="13sp"
                         android:textStyle="bold"
                         app:layout_constraintStart_toEndOf="@id/icon_nbr_bedrooms"
                         app:layout_constraintTop_toTopOf="@+id/icon_nbr_bedrooms" />
@@ -221,7 +221,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="10dp"
-                        android:textSize="13dp"
+                        android:textSize="13sp"
                         android:layout_marginBottom="10dp"
                         app:layout_constraintStart_toStartOf="@id/tv_surface"
                         app:layout_constraintTop_toBottomOf="@+id/tv_nbr_bedrooms" />
@@ -234,7 +234,7 @@
                         android:layout_height="24dp"
                         android:layout_marginStart="20dp"
                         android:layout_marginTop="20dp"
-                        android:src="@drawable/ic_place_black"
+                        android:background="@color/colorPrimary"
                         app:layout_constraintStart_toEndOf="@+id/tv_nbr_bathrooms"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -244,7 +244,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:text="@string/location"
-                        android:textSize="13dp"
+                        android:textSize="13sp"
                         android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="@+id/text_location_num_street"
                         app:layout_constraintHorizontal_bias="0.137"
@@ -257,7 +257,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="36dp"
                         android:layout_marginTop="8dp"
-                        android:textSize="13dp"
+                        android:textSize="13sp"
                         app:layout_constraintStart_toEndOf="@+id/icon_location"
                         app:layout_constraintTop_toBottomOf="@id/tv_location" />
 
@@ -266,7 +266,7 @@
                         android:id="@+id/text_location_additional"
                         android:layout_width="100dp"
                         android:layout_height="wrap_content"
-                        android:textSize="13dp"
+                        android:textSize="13sp"
                         app:layout_constraintEnd_toEndOf="@+id/text_location_num_street"
                         app:layout_constraintTop_toBottomOf="@id/text_location_num_street" />
 
@@ -275,7 +275,7 @@
                         android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="60dp"
-                        android:textSize="13dp"
+                        android:textSize="13sp"
                         app:layout_constraintStart_toStartOf="@id/text_location_num_street"
                         app:layout_constraintTop_toBottomOf="@id/text_location_additional" />
 
@@ -284,7 +284,7 @@
                         android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="60dp"
-                        android:textSize="13dp"
+                        android:textSize="13sp"
                         app:layout_constraintStart_toStartOf="@id/text_location_num_type"
                         app:layout_constraintTop_toBottomOf="@id/text_location_num_type" />
 
@@ -293,7 +293,7 @@
                         android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="60dp"
-                        android:textSize="13dp"
+                        android:textSize="13sp"
                         app:layout_constraintStart_toStartOf="@id/text_location_town"
                         app:layout_constraintTop_toBottomOf="@id/text_location_town" />
 
@@ -303,7 +303,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="60dp"
                         android:textAllCaps="true"
-                        android:textSize="13dp"
+                        android:textSize="13sp"
                         app:layout_constraintStart_toStartOf="@id/text_location_cp"
                         app:layout_constraintTop_toBottomOf="@id/text_location_cp" />
 
@@ -312,9 +312,8 @@
                         android:name="com.google.android.gms.maps.MapFragment"
                         android:layout_width="0dp"
                         android:layout_height="0dp"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginEnd="15dp"
-                        android:layout_marginBottom="10dp"
+                        android:layout_margin="15dp"
+                        android:maxWidth="200dp"
                         android:clickable="true"
                         android:focusable="true"
                         app:cameraZoom="17"
