--- a/app/src/main/res/layout-w600dp-land/activity_create_estate.xml
+++ b/app/src/main/res/layout-w600dp-land/activity_create_estate.xml
@@ -14,7 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="59dp"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            app:layout_constraintTop_toBottomOf="@+id/include3"
             tools:layout_editor_absoluteX="0dp">
 
 
@@ -63,7 +63,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:background="@android:color/white"
-                    android:hint="0"
+                    android:hint="@string/_0"
                     android:inputType="number"
                     app:layout_constraintEnd_toEndOf="@id/guideline"
                     app:layout_constraintStart_toStartOf="@+id/apart_number"
@@ -97,7 +97,7 @@
                     android:layout_marginStart="5dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="120dp"
-                    android:hint="0"
+                    android:hint="@string/_0"
                     android:textColor="@color/orange_red"
                     app:layout_constraintStart_toEndOf="@id/tvSurface"
                     app:layout_constraintTop_toBottomOf="@+id/line1" />
@@ -121,7 +121,7 @@
                     android:layout_marginStart="60dp"
                     android:layout_marginTop="12dp"
                     android:background="@android:color/white"
-                    android:hint="200"
+                    android:hint="@string/_200"
                     android:inputType="number"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tvSurface"
@@ -146,7 +146,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:background="@android:color/white"
-                    android:hint="0"
+                    android:hint="@string/_0"
                     android:inputType="number"
                     app:layout_constraintStart_toStartOf="@+id/tv_rooms"
                     app:layout_constraintTop_toBottomOf="@+id/tv_rooms" />
@@ -168,7 +168,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:background="@android:color/white"
-                    android:hint="0"
+                    android:hint="@string/_0"
                     android:inputType="number"
                     app:layout_constraintStart_toStartOf="@+id/tv_nbr_bed"
                     app:layout_constraintTop_toBottomOf="@+id/tv_nbr_bed" />
@@ -191,7 +191,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:background="@android:color/white"
-                    android:hint="0"
+                    android:hint="@string/_0"
                     android:inputType="number"
                     app:layout_constraintStart_toStartOf="@+id/tv_nbr_bath"
                     app:layout_constraintTop_toBottomOf="@+id/tv_nbr_bath" />
@@ -224,6 +224,7 @@
                     android:background="@android:color/white"
                     android:hint="@string/address_tv_detail"
                     android:padding="10dp"
+                    android:inputType="text"
                     app:layout_constraintEnd_toStartOf="@+id/guideline"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_address"
@@ -248,6 +249,7 @@
                     android:background="@android:color/white"
                     android:gravity="center"
                     android:hint="@string/city_example"
+                    android:inputType="text"
                     android:textColor="@android:color/black"
                     app:layout_constraintEnd_toStartOf="@+id/guideline"
                     app:layout_constraintStart_toStartOf="parent"
@@ -273,6 +275,7 @@
                     android:background="@android:color/white"
                     android:gravity="center"
                     android:hint="@string/post_code_example"
+                    android:inputType="textPostalAddress"
                     android:textColor="@android:color/black"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/guideline"
@@ -298,6 +301,7 @@
                     android:background="@android:color/white"
                     android:gravity="center"
                     android:hint="@string/country_example"
+                    android:inputType="text"
                     android:textColor="@android:color/black"
                     app:layout_constraintEnd_toStartOf="@+id/guideline"
                     app:layout_constraintStart_toStartOf="parent"
@@ -487,6 +491,7 @@
                     android:background="@android:color/white"
                     android:hint="@string/description_example"
                     android:padding="10dp"
+                    android:inputType="text"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_description" />
 
@@ -609,7 +614,6 @@
                     android:layout_marginEnd="240dp"
                     android:background="@android:color/white"
                     android:gravity="center"
-                    android:inputType="date"
                     android:textColor="@android:color/black"
                     app:layout_constraintStart_toStartOf="@+id/tv_entry_date"
                     app:layout_constraintTop_toBottomOf="@+id/tv_entry_date" />
@@ -632,7 +636,6 @@
                     android:layout_marginTop="20dp"
                     android:background="@android:color/white"
                     android:gravity="center"
-                    android:inputType="date"
                     android:textColor="@android:color/black"
                     app:layout_constraintStart_toStartOf="@+id/tv_sold_date"
                     app:layout_constraintTop_toBottomOf="@+id/tv_sold_date" />
@@ -655,6 +658,7 @@
                     android:background="@android:color/white"
                     android:gravity="center"
                     android:hint="@string/name_example"
+                    android:inputType="text"
                     android:textColor="@android:color/black"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/guideline"
@@ -664,6 +668,20 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
+
+
+    <ProgressBar
+            android:id="@+id/progressBar_create"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center"
+            android:indeterminateTint="@color/colorPrimaryDark"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/include3"
+            tools:ignore="UnusedAttribute" />
 
     <Button
             android:id="@+id/button_validate"
@@ -680,10 +698,11 @@
             app:layout_constraintTop_toTopOf="parent" />
 
     <include
+            android:id="@+id/include3"
             layout="@layout/toolbar_create"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
