--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -2,11 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
         android:padding="20dp"
-        android:layout_column="2"
         android:background="@color/light_grey">
 
     <TextView
@@ -16,7 +14,7 @@
             android:layout_row="0"
             android:layout_column="0"
             android:padding="10dp"
-            android:text="Monthly Payment"
+            android:text="@string/monthly_payment"
             android:textColor="#000"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -38,7 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:text="Total Payment"
+            android:text="@string/total_payment"
             android:textColor="#000"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/monthly_text" />
@@ -53,13 +51,26 @@
             app:layout_constraintTop_toBottomOf="@+id/monthly_text" />
 
     <Button
-            android:id="@+id/dialogButtonOK"
+            android:id="@+id/dialogButtonConvert"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:background="@color/colorPrimary"
-            android:text=" Ok "
+            android:background="@color/colorAccent"
+            android:text="@string/convertEuro"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/total_text" />
+
+    <Button
+            android:id="@+id/dialogButtonOK"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:background="@color/colorPrimary"
+            android:text="@string/ok"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/dialogButtonConvert" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
