--- a/app/src/main/res/layout/estate_list_item.xml
+++ b/app/src/main/res/layout/estate_list_item.xml
@@ -14,6 +14,7 @@
             android:id="@+id/estate_picture"
             android:layout_width="150dp"
             android:layout_height="150dp"
+            android:src="@drawable/no_image_original"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
@@ -42,7 +43,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
-            android:text="Manhattan"
             android:textColor="@android:color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toEndOf="@+id/barrier"
@@ -59,6 +59,21 @@
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/barrier"
             app:layout_constraintTop_toBottomOf="@+id/estate_town" />
+
+    <TextView
+            android:id="@+id/estate_sold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:text="@string/sold_text"
+            android:textColor="@android:color/holo_red_dark"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/barrier"
+            app:layout_constraintTop_toBottomOf="@+id/estate_price" />
 
 <!--    <View-->
 <!--            android:id="@+id/line1"-->
