--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -20,6 +20,10 @@
                 android:id="@+id/activity_main_drawer_create"
                 android:icon="@drawable/ic_add_black_18dp"
                 android:title="@string/item_create_title" />
+        <item
+                android:id="@+id/activity_main_drawer_logout"
+                android:icon="@drawable/ic_logout_black_18dp"
+                android:title="@string/logout_title" />
 
     </group>
 
